add title and intro to our vignette
sessionInfo:
R version 3.2.3 (2015-12-10)
Platform: x86_64-apple-darwin13.4.0 (64-bit)
Running under: OS X 10.11.2 (El Capitan)

locale:
[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8

attached base packages:
[1] stats     graphics  grDevices utils     datasets  methods   base     

other attached packages:
[1] git2r_0.13.1

loaded via a namespace (and not attached):
[1] tools_3.2.3

--- a/use/2015-12-21-spatial-stats.Rmd
+++ b/use/2015-12-21-spatial-stats.Rmd
@@ -1,12 +1,10 @@
 ---
-title: "Template Vignette"
+title: "Spatial Statistics in R"
 ---
 
 # Introduction
 
-Explain the purpose of the vignette.  
-Give a brief explanation of the questions that will be answered and some background information.
-These vignettes are written in [Rmarkdown](http://rmarkdown.rstudio.com). You can find [details about markdown here](http://rmarkdown.rstudio.com/authoring_basics.html) and [details about code chunks here](http://rmarkdown.rstudio.com/authoring_rcodechunks.html).
+This is a vignette to analyse spatial statistics in R.
 
 # Assumptions
 
